<!--
  ~ /*
  ~ * Created by Optisol on Aug 2019.
  ~ * Copyright © 2019 Optisol Business Solutions pvt ltd. All rights reserved.
  ~ * */
  -->

<resources>
    <string name="app_name">MarvelEditor</string>

    <string name="video_editing">MarvelEditor</string>
    <string name="save">Save</string>
    <string name="processing_video">Processing Video</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
    <string name="select_music">Select music</string>
    <string name="label">Label</string>

    <string name="error_filter">Select the video which you want to add filter animation</string>
    <string name="error_crop">Select the video which you want to add crop</string>
    <string name="error_music">Select the video which you want to merge the audio</string>
    <string name="error_speed">Select the video which you want to add speed animation</string>
    <string name="error_text">Select the video which you want to add text inside video</string>
    <string name="error_sticker">Select the video which you want to add sticker inside video</string>
    <string name="error_merge">Select 2 videos which you want to merge</string>
    <string name="error_transition">Select the video which you want to perform transition</string>

    <string name="error_select_sticker">Select the sticker which you want to show inside the video</string>
    <string name="error_select_sticker_pos">Select the position where you want to show the sticker</string>
    <string name="error_add_text">Add the text which you want to show inside the video</string>
    <string name="error_add_text_pos">Select the position where you want to show the text</string>
    <string name="error_select_speed">Select the playback speed which you want to apply to the video</string>
    <string name="error_select_filter">Select the filter which you want to apply to the video</string>
    <string name="error_select_smaller_video">Select the video smaller than 4 minutes</string>
    <string name="play_time">Play Time</string>
    <string name="enter_text_here">Enter text here</string>

    <string name="save_video">Would you like to save your edited video?</string>
    <string name="Continue">Continue</string>
    <string name="successfully_saved">Your video was successfully saved</string>

    <string name="not_supported_video">Video format is not supported. Would you like to convert avi to mp4 format?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_video">Select a video</string>
    <string name="select_action">Select Action</string>
    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="record_video_from_camera">Record video from camera</string>
</resources>

