<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ * Created by Optisol on Aug 2019.
  ~ * Copyright © 2019 Optisol Business Solutions pvt ltd. All rights reserved.
  ~ * */
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/curve_shape_background"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/select_action"
                android:textColor="@color/line_color"
                android:textSize="@dimen/textLarge"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/acivClose"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:tint="@color/black"
                app:srcCompat="@drawable/close"/>
    </RelativeLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/colorDivider"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/select_video_from_gallery"
                android:textColor="@color/line_color"
                android:textSize="@dimen/textLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tvCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/line_color"
                android:text="@string/record_video_from_camera"
                android:textSize="@dimen/textLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGallery"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
