<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ * Created by Optisol on Aug 2019.
  ~ * Copyright © 2019 Optisol Business Solutions pvt ltd. All rights reserved.
  ~ * */
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:custom="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/curve_shape_background"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/select_music"
                android:textColor="@color/line_color"
                android:textSize="@dimen/textLarge"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/acivClose"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:tint="@color/black"
                app:srcCompat="@drawable/close"/>
    </RelativeLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/colorDivider"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp">

        <TextView
                android:id="@+id/tv_selected_audio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_black"
                android:text="@string/label"
                android:textColor="@color/line_color"
                android:textSize="@dimen/textLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivRadio"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivRadio"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:srcCompat="@drawable/radio3x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_selected_audio"/>
    </android.support.constraint.ConstraintLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/colorDivider"/>

    <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/play_time"
            android:textColor="@color/line_color"
            android:textSize="@dimen/textLarge"/>

    <com.github.guilhe.views.SeekBarRangedView
            android:id="@+id/sbrvVideoTrim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            custom:backgroundColor="@color/line_color"
            custom:backgroundHeight="10dp"
            custom:currentMin="10"
            custom:progressColor="@color/text_header"
            custom:progressHeight="20dp"
            custom:rounded="false"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:weightSum="2">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actvStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actvEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/acbCrop"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/curve_shape_background_black"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/textLarge"
                android:visibility="visible"/>

        <FrameLayout
                android:id="@+id/flLoadingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_10sdp"
                android:visibility="gone">

            <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/processing_video"/>
        </FrameLayout>

    </RelativeLayout>

</LinearLayout>