<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ * Created by Optisol on Aug 2019.
  ~ * Copyright © 2019 Optisol Business Solutions pvt ltd. All rights reserved.
  ~ * */
  -->

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@color/black">

    <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_baseline_close_24px"
            android:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/app_name"/>

    <ImageView
            android:id="@+id/iv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_baseline_done_24px"
            android:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/app_name"/>

    <android.support.v7.widget.CardView
            android:id="@+id/cardViewOne"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardCornerRadius="15dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="#80000000"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/cardViewTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_close"
            app:layout_constraintBottom_toBottomOf="parent">

    <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_video_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:placeholderImage="@drawable/ic_baseline_add_24px"
            app:roundedCornerRadius="@dimen/_15sdp"
            android:background="@drawable/curve_shape_bg"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardViewTwo"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardCornerRadius="15dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="#80000000"
            app:layout_constraintStart_toEndOf="@+id/cardViewOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_done"
            app:layout_constraintBottom_toBottomOf="parent">

    <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_video_two"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:placeholderImage="@drawable/ic_baseline_add_24px"
            app:roundedCornerRadius="@dimen/_15sdp"
            android:background="@drawable/curve_shape_bg"/>

    </android.support.v7.widget.CardView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/white"
            android:text="@string/video_1"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@+id/cardViewOne"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/cardViewOne"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOne"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/white"
            android:text="@string/video_2"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTwo"
            app:layout_constraintEnd_toEndOf="@+id/cardViewTwo"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTwo"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>